# TradeSummarizer

./: .gitignore  CMakeLists.txt  README.md  input.csv  output.csv
include/: quantity_at_price.h  trade_info.h  trade_stream_parser.h  trade_summary.h  util.h  weighted_average_price.h
src/: main.cc  main.cpp  quantity_at_price.cc  quantity_at_price.h  trade_info.cc  trade_stream_parser.cc  trade_summary.cc  weighted_average_price.cc  weighted_average_price.h
test/: quantity_at_price_tests.cc  trade_info_tests.cc  trade_stream_parser_tests.cc  trade_summary_tests.cc  weighted_average_price_tests.cc
